--- a/site/css/rating.css
+++ b/site/css/rating.css
@@ -15,7 +15,7 @@ main {
     color: #3a547f;
     font-weight: 500;
     font-size: 30px;
-    padding-left: 10px;
+    padding-right: 80px;
     font-family: "Lora",serif;
     text-align: center;
   }
@@ -60,3 +60,4 @@ main {
   .rb_mark {
     width: 10%;
   }
+
